# riccipy

./: .gitignore  .travis.yml  AUTHORS  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: requirements.txt
docs/source/: concepts.rst  conf.py  index.rst  installation.rst
docs/source/api/: index.rst  metric.rst  numerical.rst  partial.rst  tensor.rst
riccipy/: __init__.py  metric.py  numerical.py  partial.py  tensor.py  testing.py
riccipy/metrics/: __init__.py  _metric_data.py  anti_de_sitter_1.py  anti_de_sitter_2.py  bayin.py  beckers_sinzinkayo_demaret_1.py  beckers_sinzinkayo_demaret_2.py  bertotti_robinson_1.py  bertotti_robinson_2.py  bertotti_robinson_3.py  bertotti_robinson_4.py  bianchi_1.py  bianchi_2.py  bondi_1.py  bondi_2.py  bondi_3.py  boost_1.py  boost_2.py  boost_3.py  buchdahl_land.py  cmetric.py  cross_const_curvature_1.py  cross_const_curvature_2.py  cross_const_curvature_3.py  cross_const_curvature_4.py  datta_1.py  datta_2.py  davidson.py  de_sitter_1.py  de_sitter_2.py  de_sitter_3.py  domain_wall.py  dunn_tupper.py  durgapal_1.py  durgapal_2.py  durgapal_3.py  durgapal_fuloria.py  einstein_1.py  einstein_2.py  einstein_3.py  (+77 more)
riccipy/tests/: test_metric.py  test_partial.py  test_tensor.py
tests/: test_metric.py  test_partial.py  test_tensor.py
