[metadata]
name = riccipy
version = 0.3.0
description = A tensor algebra calculator for General Relativity
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
author = Calvin Jay Ross
author_email = calvinjayross@gmail.com
license = MIT
url = https://github.com/cjayross/riccipy
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    sympy == 1.6
    numpy >= 1.15
    pyyaml >= 5.3.0

[options.extras_require]
testing =
    tox

[flake8]
exclude = .git,*migrations*,.tox,tests,docs
max-line-length = 119
max-complexity = 11
